remove auth for get product