@@ -1,5 +1,6 @@
 package com.user.app.utility;
 
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.KeyFactory;
@@ -24,10 +25,17 @@ public class KeyUtil {
     }
 
     public static RSAPublicKey getPublicKey() throws Exception {
-        String key = new String(Files.readAllBytes(Paths.get("src/main/resources/keys/public.pem")));
-        key = key.replace("-----BEGIN PUBLIC KEY-----", "")
+        InputStream is = KeyUtil.class.getClassLoader().getResourceAsStream("keys/public.pem");
+        if (is == null) {
+            throw new IllegalArgumentException("Public key file not found in resources.");
+        }
+
+        String key = new String(is.readAllBytes())
+                .replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
-                .replaceAll("\\r?\\n", "");
+                .replaceAll("\\s+", "")
+                .trim();
+
         byte[] decoded = Base64.getDecoder().decode(key);
         X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
         KeyFactory kf = KeyFactory.getInstance("RSA");
